--- a/css/main.css
+++ b/css/main.css
@@ -3,12 +3,80 @@
     box-sizing: content-box;
 }
 
+body {
+    font-family: 'Risque', cursive;
+    background-color: #666;
+
+}
+
+.great-vibes {
+    font-family: 'Great Vibes', cursive;
+
+}
+
+.risque {
+    font-family: 'Risque', cursive;
+}
+
+.indie-flower {
+    font-family: 'Indie Flower', cursive;
+}
+
+.arial, .btn {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.hotel-address {
+    color: #000;
+    padding: .25rem 1.25rem;
+}
+
+.no-link {
+    cursor: default;
+}
+
+a.no-link, a.no-link:hover {
+    color: #dc3545;
+}
+
+.top-nav a {
+    font-size: 1.75rem;
+}
+
+
+
+@media screen and (min-width: 1200px) {
+
+    .top-nav a:hover {
+        font-size: 2rem;
+    }
+    .top-nav a.event-details:hover {
+        padding: .5rem 0.3rem;
+    }
+
+    .top-nav a.accommodations:hover {
+        padding: .5rem 0.1rem;
+    }
+
+    .top-nav a.transportation:hover {
+        padding: .5rem 0.2rem;
+    }
+
+    .top-nav a.gallery:hover {
+        padding: .5rem 0.62rem;
+    }
+}
+
+.main-header {
+    padding-top: 25px;
+}
+
 #first-section {
     background: url('../img/resized/family.png') center center fixed;
     -webkit-background: cover;
     -moz-background: cover;
     background-size: cover;
-    min-height: 900px;
+    height: 900px;
 }
 
 #first-section.image-loaded {
@@ -28,7 +96,7 @@
     -webkit-background: cover;
     -moz-background: cover;
     background-size: cover;
-    min-height: 400px;
+    height: 600px;
 }
 
 #third-section.image-loaded {
@@ -38,14 +106,54 @@
     background-size: cover;
 }
 
+#fourth-section {
+    background-color: #fff;
+}
+
+#fifth-section {
+    background: url('../img/resized/ceremony.png') center center fixed;
+    -webkit-background: cover;
+    -moz-background: cover;
+    background-size: cover;
+    height: 900px;
+}
+
+#fifth-section.image-loaded {
+    background: url('../img/ceremony.jpg') center center fixed;
+    -webkit-background: cover;
+    -moz-background: cover;
+    background-size: cover;
+}
+
+#sixth-section {
+    background-color: #666;
+    color: #fff;
+    text-shadow: 1px 1px 2px #333;
+    margin: 20px auto;
+}
+
+.see-yall-there {
+    color: #dc3545 !important;
+    padding-top: 150px;
+    text-shadow: 2px 2px 4px #333;
+}
+
 /* Helper Utils  */
 
 .top-space-50 {
     margin-top: 50px;
 }
 
-/* End Helper Utils */
-
-#fifth-section {
-    min-height: 300px;
+.top-space-15 {
+    margin-top: 15px;
 }
+
+.bottom-space-10 {
+    margin-bottom: 10px;
+}
+
+.bottom-space-50 {
+    margin-bottom: 50px;
+}
+
+/* End Helper Utils */
