--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,11 @@
+/* Break Points
+  xs: 0 - 575px
+  sm: 576px - 767px
+  md: 768px - 991px
+  lg: 992px - 1199px
+  xl: 1200px+
+ */
+
 /* May need this for google maps, and others...check bootstrap 4 getting started page */
 .selector-for-some-widget {
     box-sizing: content-box;
@@ -39,23 +47,20 @@ a.no-link, a.no-link:hover {
     color: #dc3545;
 }
 
-.top-nav a {
-    font-size: 1.75rem;
-}
-
 .google-maps {
     position: relative;
     padding-bottom: 75%;
     height: 0;
     overflow: hidden;
 }
+
 .google-maps iframe {
     position: absolute;
     top: 0;
     left: 0;
     width: 100% !important;
     height: 89% !important;
-    border: 1px solid rgba(0,0,0,.125);
+    border: 1px solid rgba(0, 0, 0, .125);
     border-radius: .25rem;
 }
 
@@ -76,136 +81,14 @@ a.no-link, a.no-link:hover {
 }
 
 
-@media screen and (max-width: 1199px) {
-    .visible-lg {
-        display: none;
-    }
-
-    .hidden-lg {
-        display: block;
-    }
-
-}
-
-
-
-@media screen and (min-width: 1200px) {
-
-    .visible-lg {
-        display: block;
-    }
-
-    .hidden-lg {
-        display: none;
-    }
-
-    .top-nav a:hover {
-        font-size: 2rem;
-    }
-    .top-nav a.event-details:hover {
-        padding: .5rem 0.3rem;
-    }
-
-    .top-nav a.accommodations:hover {
-        padding: .5rem 0.1rem;
-    }
-
-    .top-nav a.transportation:hover {
-        padding: .5rem 0.2rem;
-    }
-
-    .top-nav a.gallery:hover {
-        padding: .5rem 0.62rem;
-    }
-}
 
 .main-header {
     padding-top: 25px;
 }
 
-#first-section {
-    background: url('../img/resized/family.png') center center fixed;
-    -webkit-background: cover;
-    -moz-background: cover;
-    background-size: cover;
-    height: 800px;
-}
-
-#first-section.image-loaded {
-    background: url('../img/family.jpg') center center fixed;
-    -webkit-background: cover;
-    -moz-background: cover;
-    background-size: cover;
-}
-
-#second-section {
-    min-height: 500px;
-    background-color: #fff;
-}
-
-#third-section {
-    background: url('../img/resized/proposal.jpg') center center fixed;
-    -webkit-background: cover;
-    -moz-background: cover;
-    background-size: cover;
-    height: 600px;
-}
-
-#third-section.image-loaded {
-    background: url('../img/proposal.jpg') center center fixed;
-    -webkit-background: cover;
-    -moz-background: cover;
-    background-size: cover;
-}
-
-#fourth-section {
-    background-color: #fff;
-}
-
-#fifth-section {
-    background: url('../img/resized/ceremony.png') center center fixed;
-    -webkit-background: cover;
-    -moz-background: cover;
-    background-size: cover;
-    height: 900px;
-}
-
-#fifth-section.image-loaded {
-    background: url('../img/ceremony.jpg') center center fixed;
-    -webkit-background: cover;
-    -moz-background: cover;
-    background-size: cover;
-}
-
-#sixth-section {
-    background-color: #666;
-    color: #fff;
-    text-shadow: 1px 1px 2px #333;
-    margin: 20px auto;
-}
 
 .see-yall-there {
     color: #dc3545 !important;
     padding-top: 150px;
     text-shadow: 2px 2px 4px #333;
 }
-
-/* Helper Utils  */
-
-.top-space-50 {
-    margin-top: 50px;
-}
-
-.top-space-15 {
-    margin-top: 15px;
-}
-
-.bottom-space-10 {
-    margin-bottom: 10px;
-}
-
-.bottom-space-50 {
-    margin-bottom: 50px;
-}
-
-/* End Helper Utils */
