made some more changes around the way images get displayed

--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,10 @@ body {
     margin: 20px auto;
 }
 
+.hidden {
+    display: none;
+}
+
 .great-vibes {
     font-family: 'Great Vibes', cursive;
 
