--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -4,154 +4,146 @@
   md: 768px - 991px
   lg: 992px - 1199px
   xl: 1200px+
+
+  ipad air: 768 x 1024
+  iphone X: 375 x 724
  */
 
 /* ---------    xs    --------- */
 @media screen and (max-width: 575px) {
-
     .visible-xl, .visible-lg, .visible-md, .visible-sm {
         display: none;
     }
-
     .visible-xs {
         display: block;
     }
-
     .hidden-xs {
         display: none;
     }
-
+    .gallery-nav h1 {
+        font-size: 1rem;
+    }
+    .gallery-nav h5 {
+        font-size: .75rem;
+    }
+    .gallery-nav h5.click {
+        font-size: .5rem;
+    }
 }
 
 /* ---------    sm    --------- */
 @media screen and (max-width: 767px) and (min-width: 576px) {
-
     .visible-xl, .visible-lg, .visible-md, .visible-xs {
         display: none;
     }
-
     .visible-sm {
         display: block;
     }
-
     .hidden-sm {
         display: none;
     }
-
+    .gallery-nav h1 {
+        font-size: 1.75rem;
+    }
+    .gallery-nav h5 {
+        font-size: 1rem;
+    }
 }
 
 /* ---------    md     --------- */
 @media screen and (max-width: 991px) and (min-width: 768px) {
-
     .top-nav a {
         font-size: 1rem;
     }
-
     .top-nav a:hover {
         font-size: 1.25rem;
     }
-
     .top-nav a.event-details:hover {
         padding: .5rem 0.3rem 0;
     }
-
     .top-nav a.accommodations:hover {
         padding: .5rem 0.1rem 0;
     }
-
     .top-nav a.transportation:hover {
         padding: .5rem 0.2rem 0;
     }
-
+    .top-nav a.registry:hover {
+        padding: .5rem 0.54rem 0;
+    }
     .top-nav a.gallery:hover {
         padding: .5rem 0.62rem 0;
     }
-
     .visible-xl, .visible-lg, .visible-sm, .visible-xs {
         display: none;
     }
-
     .visible-md {
         display: block;
     }
-
     .hidden-md {
         display: none;
     }
-
 }
 
 /* ---------    lg    --------- */
 @media screen and (max-width: 1199px) and (min-width: 992px) {
-
     .top-nav a {
         font-size: 1.50rem;
     }
-
     .top-nav a:hover {
         font-size: 1.75rem;
     }
-
     .top-nav a.event-details:hover {
         padding: .5rem 0.3rem 0;
     }
-
     .top-nav a.accommodations:hover {
         padding: .5rem 0.1rem 0;
     }
-
     .top-nav a.transportation:hover {
         padding: .5rem 0.2rem 0;
     }
-
+    .top-nav a.registry:hover {
+        padding: .5rem 0.54rem 0;
+    }
     .top-nav a.gallery:hover {
         padding: .5rem 0.62rem 0;
     }
-
     .visible-xl, .visible-md, .visible-sm, .visible-xs {
         display: none;
     }
-
     .visible-lg {
         display: block;
     }
     .hidden-lg {
         display: none;
     }
-
 }
 
 /* ---------    xl     --------- */
 @media screen and (min-width: 1200px) {
-
     .top-nav a {
         font-size: 1.75rem;
     }
-
     .top-nav a:hover {
         font-size: 2rem;
     }
-
     .top-nav a.event-details:hover {
         padding: .5rem 0.3rem 0;
     }
-
     .top-nav a.accommodations:hover {
         padding: .5rem 0.1rem 0;
     }
-
     .top-nav a.transportation:hover {
         padding: .5rem 0.2rem 0;
     }
-
+    .top-nav a.registry:hover {
+        padding: .5rem 0.54rem 0;
+    }
     .top-nav a.gallery:hover {
         padding: .5rem 0.62rem 0;
     }
-
     .visible-lg, .visible-md, .visible-sm, .visible-xs {
         display: none;
     }
-
     .visible-xl {
         display: block;
     }
@@ -171,5 +163,14 @@
 @media screen and (min-width: 768px) {
     .visible-md-plus {
         display: block;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .top-nav a {
+        color: #fff;
+    }
+    .top-nav a:hover, .top-nav a:active {
+        color: #b4b4b4;
     }
 }
