--- a/css/gallery.css
+++ b/css/gallery.css
@@ -6,14 +6,21 @@ body {
     padding: .75rem;
 }
 
-.back-link {
+.back-link, .info-link {
     color: #fff;
+    position: absolute;
+    z-index: 1000;
 }
 
-.back-link:visited, .back-link:hover, .back-link:active{
+.info-link {
+    right: 15px;
+}
+
+.back-link:visited, .back-link:hover, .back-link:active {
     text-decoration: none;
 }
 
-.back-link:hover, .back-link:active{
+.back-link:hover, .back-link:active,
+.info-link:hover, .info-link:active {
     color: #b4b4b4;
 }
