--- a/css/utils.css
+++ b/css/utils.css
@@ -6,10 +6,18 @@
     margin-top: 15px;
 }
 
+.top-space-30 {
+    margin-top: 30px;
+}
+
 .bottom-space-10 {
     margin-bottom: 10px;
 }
 
 .bottom-space-50 {
     margin-bottom: 50px;
+}
+
+.bottom-space-100 {
+    margin-bottom: 100px;
 }
