--- a/css/main.css
+++ b/css/main.css
@@ -110,3 +110,11 @@ a.no-link, a.no-link:hover {
     border-radius: .25rem 0 0 0;
 }
 
+
+.bus-table h4 {
+    margin-bottom: 0;
+}
+
+.d-inline {
+    display: inline;
+}
