--- a/css/utils.css
+++ b/css/utils.css
@@ -14,6 +14,10 @@
     margin-bottom: 10px;
 }
 
+.bottom-space-15 {
+    margin-bottom: 15px;
+}
+
 .bottom-space-50 {
     margin-bottom: 50px;
 }
